# hello_modern_dx12

./: CMakeLists.txt  main.cpp  readme.md  stdafx.h
